--- a/Cursos-CriandoAPI-RESTful-TypeScript-Node-Mongo/docker-compose.yml
+++ b/Cursos-CriandoAPI-RESTful-TypeScript-Node-Mongo/docker-compose.yml
@@ -3,13 +3,27 @@ version: '3.1'
 
 services:
 
+  api-node-ts:
+    image: estudos-soso/api-node-ts:1.0.0
+    build: 
+      dockerfile: ./Dockerfile
+    ports:
+      - 5000:3099
+    networks:
+      - cursos-criandoapi-restful-typescript-node-mongo
+    depends_on:
+      - mongo
+      - redis    
+
   mongo:
     image: mongo    
     restart: always
     ports:
       - 27017:27017
     networks:
-    - cursos-criandoapi-restful-typescript-node-mongo
+      - cursos-criandoapi-restful-typescript-node-mongo
+    volumes:
+      - ./scripts/CREATE_DATABASE_MONGO.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: Password
@@ -25,6 +39,18 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: Password
       ME_CONFIG_MONGODB_URL: mongodb://root:Password@mongo:27017/
+    depends_on:
+      - mongo
+
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel warning --requirepass Password
+    networks:
+      - cursos-criandoapi-restful-typescript-node-mongo
+
 
 networks:
   cursos-criandoapi-restful-typescript-node-mongo:
