--- a/Cursos-CriandoAPI-RESTful-TypeScript-Node-Mongo/package.json
+++ b/Cursos-CriandoAPI-RESTful-TypeScript-Node-Mongo/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tsc --watch",
+    "dev:diagnostics": "npx tsc --watch -diagnostics",
     "start": "node ./dist/program.js",
+    "start:docker": "node program.js",
     "start-dev": "ts-node-dev --respawn --transpile-only --inspect=9229 --project tsconfig.json program.ts",
     "start-dev-node": "node ./dist/program.js --inspect --watch",
     "start-dev-ts-node": "ts-node program.ts"
@@ -15,10 +17,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
     "@types/http-status": "^1.1.2",
+    "@types/json2csv": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
+    "@types/redis": "^4.0.11",
+    "@types/request": "^2.48.8",
+    "@types/uuid": "^9.0.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -26,8 +38,18 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "http-status": "^1.6.2",
-    "moongose": "^1.0.0"
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "moongose": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.8",
+    "request": "^2.88.2",
+    "uuid": "^9.0.0"
   }
 }
