--- a/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
+++ b/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
@@ -3,21 +3,22 @@
     "incremental": true,
     "target": "ES2022",
     "lib": [
-      "ES6"
+      "ES2020"
     ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*":[
+        "./src/*"
+      ]
+    },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
     "moduleResolution": "Node",
-    "baseUrl": "./",
     "types": [
-      "reflect-metadata"
+      "reflect-metadata",
+      "node"
     ],
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
     "resolveJsonModule": true,
     "declaration": true,
     "sourceMap": true,
@@ -45,7 +46,7 @@
     "src/**/*",
     "test/**/*",
     "jest.config.ts"
-, "program.ts"  ],
+, "Program.ts"  ],
   "exclude": [
     "node_modules",
     "dist"
