--- a/2-4-Cursos-NodeJs-CleanArchitecture-NestJS-Typescript/tsconfig.json
+++ b/2-4-Cursos-NodeJs-CleanArchitecture-NestJS-Typescript/tsconfig.json
@@ -9,7 +9,6 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -18,12 +17,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,    
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*",
