--- a/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
+++ b/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
@@ -48,7 +48,7 @@
   "include": [
     "src/**/*",
     "test/**/*",
-    "jest.config.ts",
+    "jest.global.config.ts",
     "Program.ts"
   ],
   "exclude": [
