--- a/1-2-Estudos-CleanArchitecture-Modular-Express/package.json
+++ b/1-2-Estudos-CleanArchitecture-Modular-Express/package.json
@@ -13,13 +13,17 @@
     "start:dev": "ts-node-dev --respawn --transpile-only --inspect=9229 --project tsconfig.json -r tsconfig-paths/register Program.ts",
     "test": "pnpm run build && jest",
     "test:unit": "pnpm run test --config ./test/unit/jest.config.ts --projects ./test/unit",
-    "test:unit:coverage": "pnpm run test:unit --coverage"
+    "test:unit:coverage": "pnpm run test:unit --coverage",
+    "test:integration": "pnpm run test --config ./test/integration/jest.config.ts --projects ./test/integration --runInBand"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
+    "@types/nconf": "^0.10.4",
+    "@types/node": "^20.8.7",
+    "@types/supertest": "^2.0.15",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -35,6 +40,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "nconf": "^0.12.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
