--- a/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
+++ b/1-2-Estudos-CleanArchitecture-Modular-Express/tsconfig.json
@@ -36,8 +36,8 @@
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
     "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "exactOptionalPropertyTypes": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
