--- a/2-6-NewRelic/app-1/package.json
+++ b/2-6-NewRelic/app-1/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "newrelic": "^11.8.0",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "winston": "^3.11.0"
   }
 }
