--- a/2-6-NewRelic/app-2/package.json
+++ b/2-6-NewRelic/app-2/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "newrelic": "^11.8.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "winston": "^3.11.0"
   }
 }
