--- a/2-6-NewRelic/app-3/.env-example
+++ b/2-6-NewRelic/app-3/.env-example
@@ -2,3 +2,6 @@ PORT=3012
 HELLO_WORLD="Hello World ENV"
 APP_NAME="app-3"
 NEW_RELIC_LICENCE_KEY="KEY"
+KAFKA_BROKERS="BROKER1;BROKER2;BROKER3"
+KAFKA_USER="USER"
+KAFKA_PASSWORD="PASSWORD"
