--- a/1-1-2-Estudos-Typescrip-Jest/package.json
+++ b/1-1-2-Estudos-Typescrip-Jest/package.json
@@ -14,9 +14,11 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.6.4",
     "nock": "^13.4.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
